--- a/tekton-pipeline/tasks/argocd-task.yml
+++ b/tekton-pipeline/tasks/argocd-task.yml
@@ -19,5 +19,5 @@ spec:
       image: argoproj/argocd:$(params.argocd-version)
       script: |
         argocd login $ARGOCD_SERVER --grpc-web-root-path /argo-cd --username $ARGOCD_USERNAME --password $ARGOCD_PASSWORD
-        argocd app sync $ARGOCD_APPLICATION_NAME $(params.flags) --grpc-web-root-path /argo-cd --server $ARGOCD_SERVER
+        argocd app sync $ARGOCD_APPLICATION_NAME $(params.flags) --grpc-web-root-path /argo-cd --server $ARGOCD_SERVER --prune
         argocd app wait $ARGOCD_APPLICATION_NAME --health $(params.flags) --grpc-web-root-path /argo-cd --server $ARGOCD_SERVER
